--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "ajv": "^6.10.0",
+    "body-parser": "^1.19.0",
     "csvtojson": "^2.0.8",
     "express": "^4.16.4",
     "multer": "^1.4.1",
